# GSP

./: .gitignore  404.html  LICENSE  LICENSE.md  Makefile  README  README.md  gallery-zero-dimension.html  gallery-zero.html  index.html  license.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  test-command-file-cycle-read.command.json  test-command-file-cycle.command.json  test-command-file-cycle.py
api/: protocol.html
docs/: API.md  gallery-zero-dimension.md  gallery-zero.md  index.md  license.md
examples/: camera.py  canvas-base.py  canvas-save.py  check_expected_output.py  client-server.py  color-bunny.py  example_1.py  example_2.py  example_argparse.py  example_dvz.py  example_launcher.py  example_parser.py  glm.py  image-3d.py  io_inheritance.py  io_saveload.py  launcher.py  lidar-point-cloud.py  markers-2d.py  markers-3d.py  mesh.py  multi-viewport.py  outlined-bunny.py  paths-2d.py  paths-3d.py  paths-regular-2d.py  pixels-2d-argparse.py  pixels-2d.py  pixels-3d.py  pixels-colormap.py  pixels-colors.py  pixels-interactive.py  pixels.py  points-2D.py  points-2d.py  points-3d.py  points-colormap.py  points.py  polygons-2d.py  run_all_examples.py  (+10 more)
gallery/: canvas-viewport.html  pixels-points-markers.html
gsp/: __init__.py  canvas.py  command.py  converters.py  log.py  object.py  test_command.py  test_object.py  viewport.py
gsp_matplotlib/: __init__.py
implementations/: datoviz.html  matplotlib.html  pygfx.html
overview/: capabilities.html  how.html  index.html  rationale.html
protocol/: base.html  canvas.html  changelog.html  (+3 more)
(+305 files in other folders)
